# mvim-textEditor

./: .mvimrc  CMakeLists.txt  README.md  install_dependencies.sh  install_ncurses.sh  test_undo  test_undo_extended  uncrustify.cfg
doc/: mvim_action.md  mvim_buffer.md  mvim_cursor.md  mvim_sceen.md
include/: action.hpp  buffer.hpp  bufferManager.hpp  clipboardManager.hpp  colorManager.hpp  command.hpp  configParser.hpp  cursor.hpp  editor.hpp  errorHandler.hpp  ide.hpp  mouse.hpp  mvimStarter.hpp  screen.hpp  service.hpp  syntax.hpp  textBuffer.hpp  utils.h  windowManager.hpp
include/globals/: consts.h  keywords.h  mem.h  mode.h  mvimResources.h  status.h
languages/: bash.mvimlang  c.mvimlang  cpp.mvimlang  csharp.mvimlang  go.mvimlang  java.mvimlang  javascript.mvimlang  kotlin.mvimlang  lua.mvimlang  php.mvimlang  python.mvimlang  ruby.mvimlang  rust.mvimlang  swift.mvimlang  typescript.mvimlang
src/: buffer.cpp  configParser.cpp  cursor.cpp  file.cpp  find.cpp  ide.cpp  main.cpp  mem.cpp  modify.cpp  mouse.cpp  movement.cpp  mvimStarter.cpp  screen.cpp  syntax.cpp  system.cpp  visual.cpp
test/: test_bufferManager.cpp  test_textBuffer.cpp  test_undo.cpp  test_undo_extended.cpp
